--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>React App</title>
 
-    <!-- <link rel="stylesheet" href="css/owl.carousel.min.css" /> -->
-    <!-- <link rel="stylesheet" href="css/owl.theme.default.min.css" /> -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/unicons.css" />
@@ -63,10 +63,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- <script src="./js/Headroom.js"></script>
+    <script src="./js/Headroom.js"></script>
     <script src="./js/jQuery.headroom.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/smoothscroll.js"></script>
-    <script src="./js/custom.js"></script> -->
+    <script src="./js/custom.js"></script>
   </body>
 </html>
