--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/unicons.css" />
     <link rel="stylesheet" href="css/tooplate-style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
