--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Being Mohamed Hafez ...</title>
 
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
@@ -34,7 +34,6 @@
     <link rel="stylesheet" href="css/tooplate-style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
