added new branch

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/unicons.css" />
     <link rel="stylesheet" href="css/tooplate-style.css" />
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -73,5 +74,10 @@
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/smoothscroll.js"></script>
     <script src="./js/custom.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
